--- a/rgb.html
+++ b/rgb.html
@@ -1,17 +1,20 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-	<link rel="stylesheet" type="text/css" href="rgb.css">
+	<link rel="stylesheet" type="text/css" href="style/rgb.css">
 	<link href="https://fonts.googleapis.com/css2?family=Oxygen&display=swap" rel="stylesheet">
 	<title>RGB Color Game</title>
 </head>
+
 <body>
 	<h1>
-		The Great 
+		The Great
 		<br>
-		<span id="colorDisplay">RGB</span> 
+		<span id="colorDisplay">RGB</span>
 		<br>
-		Color Game</h1>
+		Color Game
+	</h1>
 	<div id="strip">
 		<button id="reset">New Colors</button>
 		<span id="message"></span>
@@ -27,6 +30,7 @@
 		<div class="square"></div>
 		<div class="square"></div>
 	</div>
-<script type="text/javascript" src="rgb.js"></script>
+	<script type="text/javascript" src="style/rgb.js"></script>
 </body>
+
 </html>
